# mandate

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
docs/: mandate-kernel-contract-v0.2.md
examples/research-assistant/: agent-compose.yaml  agent.yaml  demo.py  org-policy.yaml
examples/research-assistant/prompts/: researcher.md
src/mandate/: __init__.py  cli.py  dashboard.py  demo.py  errors.py
src/mandate/compiler/: __init__.py  bundle.py  compile.py  loader.py
src/mandate/kernel/: __init__.py  audit.py  broker.py  budget.py  egress.py  gateway.py  memory.py  policy_engine.py  process_transport.py  syscalls.py  tools.py  transport.py
src/mandate/model/: __init__.py  capability.py  deployment.py  image.py  policy.py  sensitivity.py  subject.py
src/mandate/sdk/: __init__.py  client.py
tests/: conftest.py  test_broker_egress_memory.py  test_budget_audit.py  test_capability.py  test_cli.py  test_compiler.py  test_demo.py  test_gateway.py  test_no_bypass.py  test_policy_engine.py  test_process_isolation.py
