[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mandate"
version = "0.2.0"
description = "A capability microkernel for AI agents — the P0 vertical slice."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Mandate authors" }]
keywords = ["agents", "capabilities", "microkernel", "policy", "ai-safety"]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
mandate = "mandate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
